test/Vehicle/Test/CompileMode/Error/DatasetErrors/negativeNat.vcl
-- Test passes a reference to a dataset with a negative number in
@dataset
trainingDataset : Tensor Nat [4]